# godot-rust-template

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  default.nix  export_presets.cfg  project.godot  rustfmt.toml
core/: Cargo.toml  build.rs
core/src/: lib.rs
core/src/scenes/: example.rs  mod.rs
godot/: Main.tscn
godot/libs/: Example.gdns  game-core.gdnlib  game-lib.gdnlib
lib/: Cargo.toml  build.rs
lib/src/: lib.rs
nix-envs/: build-linux.nix  build-windows.nix  dev.nix
test/: .gitignore  Cargo.toml  build.rs  game-test.gdnlib
test/src/: example_test.rs  lib.rs
