[package]
name = "mygame"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.3"
game-core = { path = "../core" }

[build-dependencies]
gdnative-project-utils = "0.1.4"

[lib]
crate-type = ["cdylib"]

