[package]
name = "game-test"
version = "0.0.0"
edition = "2018"
build = "./build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-core = { path = "../core" }
gdnative = "0.9.3"
euclid = "0.22.3"
stdext = "0.2.1"
regex = "1.5.4"
q12-godot-helpers = { path = "../../../projects/q12-godot-helpers" }
godot-testicles = { path = "../../../projects/godot-testicles" }

[build-dependencies]
godot-testicles = { path = "../../../projects/godot-testicles" }

[lib]
crate-type = ["cdylib"]

